--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p id="p2">O iPhone 13 Pro é uma enorme evolução. Ele traz uma rapidez absurda a tudo o que você faz e vem com novos recursos espetaculares para fotos e vídeos. Tudo em dois tamanhos.</p>
         <p id="p3">A partir de R$ 9.499</p>
         <ul class="comprar" id="comprar">
-            <li id="btn-comprar"><a href="#">Comprar</a></li>
+            <li id="btn"><a href="#">Comprar</a></li>
         </ul>
         <img src="imgs/iphone_blue.jpg" alt="">
         
