--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <ul class="comprar" id="comprar">
             <li id="btn"><a href="#">Comprar</a></li>
         </ul>
-        <img src="imgs/iphone_blue.jpg" alt="">
+        <img id="iphone-image" src="imgs/iphone_blue.jpg" alt="">
         
         <div id="image-picker">
             <ul>
